syntax = "proto3";
package grpc.ready;

import "google/protobuf/timestamp.proto";
import "svc-storage-grpc.proto";

// Ready Request
message ReadyRequest {
    // No arguments
}

// Ready Response
message ReadyResponse {
    // ready
    bool ready = 1;
}
